fix spacing

--- a/custom.css
+++ b/custom.css
@@ -37,8 +37,10 @@ text-align: center;
   background-color: #FFB6C1;
   font-family: Didot;
   color: black;
-  margin: 5px;
-  width: 50%;
+  margin: 10px;
+  width: 60%;
+  padding: 5px;
+  font-size: 16px;
 }
 
 *{
